--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "d3-request": "^1.0.5",
     "esri-leaflet": "^2.0.8",
+    "esri-leaflet-renderers": "^2.0.6",
     "leaflet": "^1.0.3",
     "vue": "^2.2.2",
     "vue-spinner": "^1.0.2"
