--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
     "download": "node build/download.js",
-    "lint": "eslint --ext .js,.vue src"
+    "lint": "eslint --ext .js,.vue src",
+    "test": "cross-env BABEL_ENV=test karma start test/karma.conf.js --single-run"
   },
   "dependencies": {
-    "csv": "^1.1.1",
-    "d3-request": "^1.0.5",
     "esri-leaflet": "^2.0.8",
     "esri-leaflet-renderers": "^2.0.6",
     "leaflet": "^1.0.3",
@@ -32,6 +31,7 @@
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "chalk": "^1.1.3",
+    "chai": "^4.1.1",
     "compression-webpack-plugin": "^1.0.0",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
@@ -53,11 +53,22 @@
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "json-loader": "^0.5.4",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.1",
+    "karma-mocha": "^1.3.0",
+    "karma-sinon-chai": "^1.3.1",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.31",
+    "karma-webpack": "^2.0.4",
+    "mocha": "^3.5.0",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.1.0",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
+    "sinon": "^3.2.0",
+    "sinon-chai": "^2.13.0",
     "url-loader": "^0.5.7",
     "vue-loader": "^11.1.4",
     "vue-style-loader": "^2.0.0",
