--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "leaflet": "^1.0.3",
     "moment": "^2.18.1",
     "vue": "^2.2.2",
+    "vue-awesome": "^2.3.1",
     "vue-spinner": "^1.0.2"
   },
   "devDependencies": {
