--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.18.1",
     "vue": "^2.2.2",
     "vue-awesome": "^2.3.1",
+    "vue-slider-component": "^2.4.3",
     "vue-spinner": "^1.0.2"
   },
   "devDependencies": {
